Fix alignment on frontpage

--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -682,17 +682,15 @@
         @apply text-center gap-3;
     }
 
-    .masthead-left,
-    .masthead-right {
-        @apply items-center justify-center;
-    }
-
     .masthead-title {
         font-size: 2.5rem;
     }
 
     .nav-bar {
-        @apply flex-wrap gap-4;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.5rem 0;
+        text-align: center;
     }
 
     .main-grid {
